force-app/main/default/objects/OrderRefund__c/OrderRefund__c.object-meta.xml
<CustomObject>
    <label>Order Refund</label>
    <nameField>
        <label>Order Refund Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Refunds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>