force-app/main/default/objects/OrderRefund__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Order Refunds</relationshipLabel>
    <relationshipName>Order_Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>