force-app/main/default/objects/OrderRefund__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Order Refunds</relationshipLabel>
    <relationshipName>Order_Refunds</relationshipName>
    <type>Lookup</type>
</CustomField>